# just-buildit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: configuration.md  contributing.md  environment-variables.md  examples.md  index.md
examples/bazel/: BUILD.bazel  WORKSPACE  bazel-bazel  bazel-bin  bazel-out  bazel-testlogs  build_ext.py  pyproject.toml
examples/bazel/src/: greeter.c
examples/cmake/: CMakeLists.txt  Makefile  pyproject.toml
examples/cmake/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
examples/cmake/src/: add.c
examples/make/: pyproject.toml
examples/make/src/add/: add.c
examples/meson/: Makefile  meson.build  pyproject.toml
examples/meson/src/: add.c
examples/mixed/: Makefile  pyproject.toml
examples/mixed/src/calc/: __init__.py  _core.c
examples/nested/: Makefile  pyproject.toml
examples/nested/src/imagelib/: __init__.py
examples/nested/src/imagelib/codec/: __init__.py  _encode.c
examples/nested/src/imagelib/filters/: __init__.py  _blur.c
just_build/: __init__.py  _build.py  _meta.py  _wheel.py
src/just_build/: __init__.py  _build.py
src/just_buildit/: __init__.py  _build.py  _cli.py  _meta.py  _sdist.py  _wheel.py
tests/: test_build.py  test_cli.py  test_examples.py  test_pypi.py
tests/fixture/: Makefile  README.md  pyproject.toml
tests/fixture/src/hello/: hello.c
tests/fixture_noconfig/: pyproject.toml
tests/fixture_noconfig/src/hello/: hello.c
