[build-system]
requires = ["just-buildit"]
build-backend = "just_build"

[tool.just-build]
package = "just_build"
repair = false

[project]
name = "just-buildit"
version = "0.1.2"
description = "The missing PEP 517 build backend for C extensions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "zensical>=0.0.29",
]

[project.urls]
Homepage = "https://github.com/just-buildit/just-build"
Repository = "https://github.com/just-buildit/just-build"
"Bug Tracker" = "https://github.com/just-buildit/just-build/issues"
