[build-system]
requires = ["just-buildit"]
build-backend = "just_buildit"

[tool.just-buildit]
package = "just_buildit"
repair = false

[project]
name = "just-buildit"
version = "0.3.0"
description = "The missing PEP 517 build backend for C extensions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "zensical>=0.0.29",
]

[project.scripts]
just-buildit = "just_buildit._cli:main"

[project.urls]
Homepage = "https://github.com/just-buildit/just-buildit"
Repository = "https://github.com/just-buildit/just-buildit"
"Bug Tracker" = "https://github.com/just-buildit/just-buildit/issues"
