[build-system]
requires = ["just-buildit"]
build-backend = "just_buildit"

[project]
name = "hello"
version = "0.1.0"
description = "Minimal C extension fixture for just-buildit integration tests."
readme = "README.md"
requires-python = ">=3.11"

[tool.just-buildit]
command = "make"
repair = false   # skip repair in tests; auditwheel not required in CI
