[build-system]
requires = ["just-buildit"]
build-backend = "just_buildit"

[project]
name = "hello"
version = "0.1.0"
description = "Zero-config fixture for just-buildit integration tests."
requires-python = ">=3.11"

[tool.just-buildit]
repair = false  # skip repair in tests; auditwheel/delocate not required in CI
